# photo-exif-tagger

./: README.md  pyproject.toml
flaskr/: __init__.py  main.py
photo_exif_tagger/: main.py
tests/: test_photo_exif_tagger.py
