[tool.poetry]
name = "photo-exif-tagger"
version = "0.1.0"
description = ""
authors = ["Eric Sandine <ericsandine@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
exif = "^1.0.4"
gpxpy = "^1.4.2"
pytz = "^2020.5"
gpsphoto = "^2.2.3"
ExifRead = "^2.3.2"
Pillow = "^8.1.0"
piexif = "^1.1.3"
Flask = "^1.1.2"
flask-mongoengine = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
